# enum_serialization_example

./: CMakeLists.txt  main.cpp
